# videoTracker

./: .gitignore  README.md
src/: CMakeLists.txt  ChiliProcessor.cpp  ChiliProcessor.h  ChiliTracker.cpp  ChiliTracker.h  Logger.cpp  Logger.h  TagData.h  VideoReader.cpp  VideoReader.h  VideoTracker.cpp  VideoTracker.h  main.cpp
